<resources>
    <string name="app_name">Android social network</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="result">Result</string>
    <string name="auth">Auth</string>
    <string name="user_name">User name</string>
    <string name="user_status">User status</string>
    <string name="logout">Logout</string>
</resources>